# Nutch Change Log

Nutch 1.18 Development



Nutch 1.17 Release 18/06/2020 (dd/mm/yyyy)
Release Report: https://s.apache.org/ovhry

Bug

    [NUTCH-1559] - parse-metatags duplicates extracted metatags
    [NUTCH-2379] - crawl script dedup's crawldb update is slow
    [NUTCH-2419] - Some URL filters and normalizers do not respect command-line override for rule file
    [NUTCH-2507] - NutchTutorial wiki pages as a lot of outdated command line calls when it starts with the solr interaction
    [NUTCH-2511] - SitemapProcessor limited by http.content.limit
    [NUTCH-2525] - Metadata indexer cannot handle uppercase parse metadata
    [NUTCH-2567] - parse-metatags writes all meta tags twice
    [NUTCH-2720] - ROBOTS metatag ignored when capitalized
    [NUTCH-2745] - Solr schema.xml not shipped in binary release
    [NUTCH-2748] - Fetch status gone (redirect exceeded) not to overwrite existing items in CrawlDb
    [NUTCH-2751] - nutch clean does not work with secured solr cloud
    [NUTCH-2753] - Add -listen option to command-line help of CrawlDbReader and LinkDbReader
    [NUTCH-2754] - fetcher.max.crawl.delay ignored if exceeding 5 min. / 300 sec.
    [NUTCH-2760] - protocol-okhttp: properly record HTTP version in request message header
    [NUTCH-2761] - ivy jar fails to download
    [NUTCH-2763] - protocol-okhttp (store.http.headers): add whitespace in status line after status code also when message is empty
    [NUTCH-2770] - Subcollection logic allows empty string as a whitelist value, thus matching every incoming document.
    [NUTCH-2778] - indexer-elastic to properly log errors
    [NUTCH-2787] - CrawlDb JSON dump does not export metadata primitive data types correctly
    [NUTCH-2789] - Documentation: update links to point to cwiki
    [NUTCH-2790] - CSVIndexWriter does not escape leading quotes properly
    [NUTCH-2791] - domainstats, protocolstats and crawlcomplete do not handle GCS URLs

New Feature
